Fixed margins, padding and horizontal alignment of X,Y co-ordinates in end point section.

--- a/src/app/components/SideNav/Synthesis/three-pos-synthesis/three-pos-synthesis.component.scss
+++ b/src/app/components/SideNav/Synthesis/three-pos-synthesis/three-pos-synthesis.component.scss
@@ -646,13 +646,13 @@ coupler-specifications-container {
   background-color: #ffffff;
   padding: 10px;
   margin: 10px 8px 8px 10px;
-
   border-radius: 8px;
   border: 1px solid #ddd;
   //width:230px;
   width:100%;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.01);
   box-sizing: border-box;
+
 }
 
 .position-header {
@@ -739,15 +739,19 @@ span.icons {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 15px;
-  margin-bottom: 10px;
+  gap: 8px;
+  margin-bottom: 22px;
+  margin-top: 15px;
 }
 
 .input-row label {
   font-size: 12px;
   color: #666;
-  width: 20px;
-  text-align: right;
+  //width: 20px;
+  width:auto;
+  text-align: left;
+  margin-right: 2px;
+
 }
 
 .coordinate-input {
@@ -756,13 +760,16 @@ span.icons {
   padding: 4px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  //margin-bottom: 10px;
+  margin: 0;
+
 }
 
 .coordinate-input.invalid {
   border: 1px solid red;
   background-color: #ffe6e6;
 }
+
+
 
 .positionCreateEndPoints {
   display: flex;
@@ -848,11 +855,10 @@ span.icons {
   flex-wrap: wrap;
   gap: 10px;
   background-color: #f8f9fa;
-
   border-radius: 6px;
   border: 1px solid #d1d4d9;
   margin-top:10px;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
 
 }
 
@@ -963,6 +969,9 @@ span.icons {
   color: #e8eaf6;
   background-color: #3F51B5;
 }
+
+
+
 
 
 
